# whisper_ros

./: .gitignore  README.md  dependency.repos
.github/workflows/: buildtest.yaml  code_review.yaml
whisper_cpp_vendor/: CMakeLists.txt  package.xml
whisper_ros/: CMakeLists.txt  package.xml
whisper_ros/config/: audio_capture.yaml
whisper_ros/include/whisper_ros/: audio_buffer.hpp  visibility_control.hpp  whisper_ros_component.hpp
whisper_ros/launch/: speech_to_text.launch.py  speech_to_text.launch.xml
whisper_ros/scripts/: .gitignore
whisper_ros/src/: audio_buffer.cpp  parameters.yaml  whisper_ros_component.cpp
whisper_ros/test/src/: test_audio_buffer.cpp
whisper_ros_msgs/: CMakeLists.txt  package.xml
whisper_ros_msgs/msg/: Segment.msg  SegmentArrayStamped.msg
