<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whisper_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ms.kataoka@gmail.com">masaya-desktop</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>ament_index_cpp</depend>
  <depend>audio_capture</depend>
  <depend>audio_common_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>whisper_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
